--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
                     <!-- First Project -->
                     <div class="md:w-1/3 px-4 mb-6">
                         <div class="relative flex flex-col min-w-0 rounded-lg border bg-white border-gray-300 shadow-md">
-                            <a href="https://wiswanath.github.io/TEKWEB/Todo-List%20Vuejs/index.html" target="_blank">
+                            <a href="https://wiswanath.github.io/Wiswa-Project/Todo-List%20Vuejs/index.html" target="_blank">
                                 <img src="img/Todolist.png" class="w-full h-48 object-cover rounded-t-lg" alt="Todolist Project" />
                             </a>
                             <div class="flex-auto p-6">
@@ -152,7 +152,7 @@
                     <!-- Second Project -->
                     <div class="md:w-1/3 px-4 mb-6">
                         <div class="relative flex flex-col min-w-0 rounded-lg border bg-white border-gray-300 shadow-md">
-                            <a href="https://wiswanath.github.io/TEKWEB/Calculate%20Math/index.html" target="_blank">
+                            <a href="https://wiswanath.github.io/Wiswa-Project/" target="_blank">
                                 <img src="img/math.png" class="w-full h-48 object-cover rounded-t-lg" alt="Math Project" />
                             </a>
                             <div class="flex-auto p-6">
